# softethervpn-android

./: README.md  local.properties
app/: build.gradle
app/src/androidTest/java/me/lfasmpao/softethervpn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hamcore.se2
app/src/main/cpp/: CMakeLists.txt  iconv.cmake  ncurses.cmake  readline.cmake
app/src/main/cpp/SoftEtherVPN/: AUTHORS.TXT  README.md
app/src/main/cpp/SoftEtherVPN/src/: BUILD_UNIX.md  CurrentBuild.txt  SEVPN.sln  WARNING.TXT
app/src/main/cpp/SoftEtherVPN/src/Cedar/: Account.c  Account.h  Admin.c  Admin.h  CM.c  Cedar.c  Cedar.h  Cedar.vcproj  CedarType.h  Client.c  Client.h  Command.c  Connection.c  Connection.h  DDNS.c  DDNS.h  EtherLog.c  Hub.c  Hub.h  IPC.c  IPC.h  Listener.c  Logging.c  Nat.c  Nat.h  Proto_EtherIP.c  Proto_IKE.c  Proto_OpenVPN.c  Proto_OpenVPN.h  Proto_PPP.c  Proto_PPP.h  Protocol.c  Protocol.h  Radius.c  Radius.h  Remote.c  Remote.h  SW.c  Sam.c  Server.c  (+8 more)
app/src/main/cpp/SoftEtherVPN/src/Mayaqua/: Cfg.c  Cfg.h  Encrypt.c  Encrypt.h  FileIO.c  FileIO.h  Internat.c  Kernel.c  Kernel.h  MayaType.h  Mayaqua.c  Mayaqua.h  Mayaqua.vcproj  Memory.c  Memory.h  Microsoft.c  Microsoft.h  Network.c  Network.h  Pack.c  Pack.h  Secure.c  Str.c  Str.h  Table.h  Unix.c
app/src/main/cpp/SoftEtherVPN/src/Mayaqua/win32_inc/: zlib.h
app/src/main/cpp/SoftEtherVPN/src/Mayaqua/win32_inc/openssl/: opensslconf.h
app/src/main/cpp/SoftEtherVPN/src/See/: Packet.c
app/src/main/cpp/SoftEtherVPN/src/vpntest/: vpntest.c
app/src/main/cpp/include/readline/: config.h
app/src/main/cpp/readline/: bind.c  callback.c  colors.c  compat.c  complete.c  display.c  funmap.c  histexpand.c  histfile.c  history.c  histsearch.c  input.c  isearch.c  keymaps.c  kill.c  macro.c  mbutil.c  misc.c  nls.c  parens.c  parse-colors.c  readline.c  rldefs.h  rltty.c  rlwinsize.h  savestring.c  search.c  shell.c  signals.c  tcap.h  terminal.c  text.c  tilde.c  undo.c  util.c  vi_mode.c  xfree.c  xmalloc.c
app/src/main/java/me/lfasmpao/softethervpn/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/me/lfasmpao/softethervpn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
